# Django-Start-Project

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/core/utils/: collections.py  misc.py  settings.py
backend/home/: urls.py  views.py
backend/home/templates/home/: home_logged.html  home_not_logged.html
backend/project/: settings.py  urls.py
backend/project/settings/: __init__.py  allauth.py  base.py  custom.py  docker.py  envvars.py  logging.py  my_apps.py
backend/static/src/: output.css
backend/templates/: _base.html  file_upload.html  htmx.html  index.html  main.html
config/: settings.py  urls.py
core/management/commands/: create_dev_user.py
core/tests/: test_views.py
frontend/: app.css  output.css  package-lock.json  package.json
local/: settings.dev.py
static/css/: styles.css
templates/: base.html  home.html
templates/account/: login.html  logout.html  password_reset.html  signup.html
