[project]
name = "django-start-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]


[tool.ruff]
line-length = 119
extend-exclude = [
    "frontend",
    "migrations",       
    "__pycache__",
    ".venv",
    "venv",
    "staticfiles",
    "media",
    "*.pyc",
    ".pytest_cache",
    ".ruff_cache",
    "db.sqlite3",
    "manage.py",
]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "single"
