[project]
name = "django-start-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-split-settings>=1.3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "taskipy>=1.14.1",
]



[tool.ruff]
line-length = 119
extend-exclude = [
    "frontend",
    "migrations",       
    "__pycache__",
    ".venv",
    "venv",
    "staticfiles",
    "media",
    "*.pyc",
    ".pytest_cache",
    ".ruff_cache",
    "db.sqlite3",
    "manage.py",
]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-p no:warnings"

[tool.taskipy.tasks]
lint = "uv run ruff check ."
format = "uv run ruff format ."    
pre_test = "task lint"
test = "pytest --cov=backend -v"
post_test = "coverage html"
run = "python ./backend/manage.py runserver"
migrate = "python ./backend/manage.py migrate"
createsuperuser = "python ./backend/manage.py createsuperuser"
pre_start = "uv sync"
start = "task migrate && task createsuperuser && task run"
newapp = "python ./backend/manage.py startapp"
migrations = "python ./backend/manage.py makemigrations"

